--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <jedis.version>2.7.2</jedis.version>
     <solrj.version>4.10.3</solrj.version>
     <shiro.version>1.3.2</shiro.version>
-
+      <fastjson.version>1.2.28</fastjson.version>
   </properties>
 
   <dependencies>
@@ -196,6 +196,12 @@
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
           <version>${jackson.version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+          <version>${fastjson.version}</version>
       </dependency>
 
       <!-- httpclient -->
