--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,6 +56,7 @@
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
+        <welcome-file>/template/layui/index.jsp</welcome-file>
     </welcome-file-list>
 
 </web-app>
